[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
message-io = "0.14.6"
obs-wrapper = "0.4.1"
serde = "1.0.158"
serde_json = "1.0.96"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "keystroke-overlay"
path = "src/main.rs"

