[package]
name = "keystroke-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
log = "0.4.17"
message-io = "0.14.6"
obs-wrapper = { git = "https://github.com/Beaux44/rust-obs-plugins.git", rev = "e591be5" }
serde = "1.0.158"
serde_json = "1.0.96"

[lib]
name = "keystroke_overlay"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "keystroke-overlay-standalone"
path = "src/main.rs"

